--- a/kaggle/sherbank-housing/Linear_Regression.ipynb
+++ b/kaggle/sherbank-housing/Linear_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-05-21T21:59:27.728273Z",
@@ -10,7 +10,27 @@
     },
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/\n",
+      "/Users/z002pck\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'util'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-db32f2406dc2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear_model\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLogisticRegression\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'util'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
@@ -25,6 +45,8 @@
     "import sys\n",
     "from pathlib import Path\n",
     "d = Path().resolve().parent.parent\n",
+    "print(d)\n",
+    "print(Path().resolve())\n",
     "sys.path.insert(0, str(d))\n",
     "\n",
     "import util.utils as utils\n",
@@ -75,7 +97,7 @@
    "source": [
     "cols = [\"id\",\"life_sq\",\"full_sq\",\"build_year\",\"num_room\",\"timestamp\",\"price_doc\"]\n",
     "nearby_features = [\"office\"]\n",
-    "prediction_cols = [\"life_sq\",\"build_year\",\"num_room\",\"transaction_year\",\"log_life_sq\"]\n"
+    "prediction_cols = [\"life_sq\",\"build_year\",\"num_room\",\"transaction_year\",\"log_life_sq\"]"
    ]
   },
   {
@@ -385,8 +407,7 @@
     "# df_features[np.abs(df_features.price_doc-df_features.price_doc.mean())<=(5*df_features.price_doc.std())]\n",
     "\n",
     "# Removing all columns with outliers using z scores\n",
-    "# df[(np.abs(stats.zscore(df)) < 3).all(axis=1)]\n",
-    "\n"
+    "# df[(np.abs(stats.zscore(df)) < 3).all(axis=1)]"
    ]
   },
   {
@@ -1047,7 +1068,7 @@
     "   \n",
     "df[np.isnan(df[\"log_office\"])][prediction_cols].head()\n",
     "np.sum(np.isnan(df[\"life_sq\"]))\n",
-    "detect_nan_columns(df[prediction_cols])\n"
+    "detect_nan_columns(df[prediction_cols])"
    ]
   },
   {
@@ -1080,8 +1101,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# Create linear regression object\n",
     "regr = linear_model.LinearRegression(copy_X=True,n_jobs=2,normalize=True)\n",
     "\n",
@@ -1093,8 +1112,7 @@
     "    y_pred[y_pred < 10] = np.mean(y_pred)\n",
     "    return y_pred\n",
     "\n",
-    "y_pred = predict(X_test)\n",
-    "\n"
+    "y_pred = predict(X_test)"
    ]
   },
   {
@@ -1144,8 +1162,7 @@
     "eps = 1e-7\n",
     "np.isnan(y_test).any()\n",
     "np.any(np.absolute(y_pred) < eps)\n",
-    "np.log(y_test)\n",
-    "\n"
+    "np.log(y_test)"
    ]
   },
   {
@@ -1517,7 +1534,7 @@
    "source": [
     "ids =np.array(df_test[\"id\"]).astype(int)\n",
     "my_solution = pd.DataFrame(y_t, ids, columns = [\"price_doc\"])\n",
-    "print(my_solution.shape)\n"
+    "print(my_solution.shape)"
    ]
   },
   {
@@ -1626,5 +1643,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
