Click prediction competition

--- a/kaggle/sherbank-housing/Linear_Regression.ipynb
+++ b/kaggle/sherbank-housing/Linear_Regression.ipynb
@@ -63,8 +63,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-21T21:59:39.829562Z",
      "start_time": "2017-05-21T21:59:29.761386Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -121,8 +120,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-21T22:07:24.568358Z",
      "start_time": "2017-05-21T22:07:24.206399Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -307,8 +305,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-21T22:07:27.536100Z",
      "start_time": "2017-05-21T22:07:27.076575Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -338,8 +335,7 @@
      "end_time": "2017-05-21T22:09:02.729056Z",
      "start_time": "2017-05-21T22:08:39.978157Z"
     },
-    "code_folding": [],
-    "collapsed": false
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -424,8 +420,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-21T22:20:03.674152Z",
      "start_time": "2017-05-21T22:20:02.382958Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -455,8 +450,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-20T17:43:42.443746Z",
      "start_time": "2017-05-20T17:43:41.341428Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -538,8 +532,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-20T17:43:43.219891Z",
      "start_time": "2017-05-20T17:43:43.034397Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -761,8 +754,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-20T17:43:45.623055Z",
      "start_time": "2017-05-20T17:43:44.120136Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -797,8 +789,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-20T17:43:47.683823Z",
      "start_time": "2017-05-20T17:43:47.502347Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -829,8 +820,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-20T17:43:48.649860Z",
      "start_time": "2017-05-20T17:43:48.386475Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1085,8 +1075,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-20T17:43:50.654854Z",
      "start_time": "2017-05-20T17:43:50.422931Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1122,8 +1111,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-20T17:43:51.193108Z",
      "start_time": "2017-05-20T17:43:51.164032Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1179,8 +1167,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-20T17:43:52.829171Z",
      "start_time": "2017-05-20T17:43:52.815099Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1214,8 +1201,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-21T16:41:57.286803Z",
      "start_time": "2017-05-21T16:41:55.761568Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1248,8 +1234,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-20T17:43:58.231095Z",
      "start_time": "2017-05-20T17:43:55.875102Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1266,8 +1251,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-20T17:43:58.888512Z",
      "start_time": "2017-05-20T17:43:58.770763Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1519,8 +1503,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-20T17:44:00.211754Z",
      "start_time": "2017-05-20T17:44:00.196715Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1586,7 +1569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   },
   "toc": {
    "colors": {
@@ -1606,7 +1589,7 @@
    "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
-   "threshold": "5",
+   "threshold": 4,
    "toc_cell": false,
    "toc_section_display": "block",
    "toc_window_display": true,
@@ -1643,5 +1626,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
