--- a/kaggle/sherbank-housing/Sherbank-Data-Exploration-graphs.ipynb
+++ b/kaggle/sherbank-housing/Sherbank-Data-Exploration-graphs.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-21T11:04:01.751105Z",
-     "start_time": "2017-05-21T11:03:54.338373Z"
+     "end_time": "2017-09-16T08:23:28.720565Z",
+     "start_time": "2017-09-16T08:23:28.293680Z"
     },
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -45,8 +45,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-21T11:04:06.094820Z",
      "start_time": "2017-05-21T11:04:01.847362Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -278,8 +277,7 @@
     "ExecuteTime": {
      "end_time": "2017-05-20T21:59:55.045800Z",
      "start_time": "2017-05-20T21:59:53.935673Z"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -317,7 +315,6 @@
      "end_time": "2017-05-20T21:59:55.331517Z",
      "start_time": "2017-05-20T21:59:55.229240Z"
     },
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -422,7 +419,6 @@
      "end_time": "2017-05-20T21:43:06.537532Z",
      "start_time": "2017-05-20T21:42:49.566405Z"
     },
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -764,7 +760,6 @@
      "end_time": "2017-05-21T11:04:12.047945Z",
      "start_time": "2017-05-21T11:04:06.588131Z"
     },
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1250,7 +1245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   },
   "notify_time": "10",
   "toc": {
@@ -1271,7 +1266,7 @@
    "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
-   "threshold": "5",
+   "threshold": 4,
    "toc_cell": false,
    "toc_position": {
     "height": "393px",
