Clearing file of unrelated details

--- a/analytics-vidhya/click-prediction/Breaking-train-set.ipynb
+++ b/analytics-vidhya/click-prediction/Breaking-train-set.ipynb
@@ -2,206 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-09-21T15:03:40.333737Z",
-     "start_time": "2017-09-21T15:03:40.250872Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "93\n",
-      "62\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "37"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "faizan = [\"amuti-posix\",\n",
-    "\"apolloop\",\n",
-    "\"apolloop-misc\",\n",
-    "\"apolloop-sde\",\n",
-    "\"m2a\",\n",
-    "\"maws-console-read-only\",\n",
-    "\"software\",\n",
-    "\"source-code\",\n",
-    "\"source-code-misc\",\n",
-    "\"source-code-sde\",\n",
-    "\"thompson-dev\",\n",
-    "\"tintin-db-ro\",\n",
-    "\"tintinblr2\",\n",
-    "\"tradein\",\n",
-    "\"tradein-dml\",\n",
-    "\"tradein-sde\",\n",
-    "\"tradein-sea\",\n",
-    "\"tradein-strings-admin\",\n",
-    "\"tradein-strings-editor\",\n",
-    "\"adapt-demo-viewers\",\n",
-    "\"BI-GROUP-RUBI\",\n",
-    "\"BI-GROUP-TRADEINPLATFORM-ETL\",\n",
-    "\"BI-GROUP-TRADEINPLATFORM-REPORTS\",\n",
-    "\"BI-GROUP-TRADEINS\",\n",
-    "\"burner-users-prod\",\n",
-    "\"dataflux-tradein\",\n",
-    "\"heartbeat-hbs2\",\n",
-    "\"m2a-jsgo3mmk5ua5nwaqnbxa-SHADOW\",\n",
-    "\"mediatech-j5fm3z7pu2nqbwc6izqq-SHADOW\",\n",
-    "\"MRA-Guidebook\",\n",
-    "\"PPDataDevoRW\",\n",
-    "\"SalesVelocity-Users\",\n",
-    "\"sourcecodesde-ytpxj4yoqzxiuwisam2a-SHADOW\",\n",
-    "\"thompson-dev\",\n",
-    "\"thompson-pm\",\n",
-    "\"trade-in-postorder\",\n",
-    "\"tradein-dev\",\n",
-    "\"tradein-dw\",\n",
-    "\"tradein-fc5lrminur4u2wec6rgq-SHADOW\",\n",
-    "\"tradein-sea\",\n",
-    "\"tradeinblr2-ae3er6ngxtkwe3ssni6q-SHADOW\",\n",
-    "\"TradeInPromo\",\n",
-    "\"wdmetrics-sandbox\",\n",
-    "\"amazon-recommerce-libby\",\n",
-    "\"fs-df-vendormanager\",\n",
-    "\"FS-NA-Media\",\n",
-    "\"IndiaTechs\",\n",
-    "\"media-tech\",\n",
-    "\"MyTime-India-Users-Rules-Base\",\n",
-    "\"NA-Vendor-Agreement-FAQ-Business-ANT\",\n",
-    "\"north-america-retail\",\n",
-    "\"PAOS-Reports-ANT\",\n",
-    "\"retail-sherpa-business\",\n",
-    "\"retail-sherpa-tc-guide\",\n",
-    "\"ryder-org-tech-all\",\n",
-    "\"singv-org\",\n",
-    "\"techblrhyddel\",\n",
-    "\"tintin-dev-shared-SharedMB\",\n",
-    "\"trade-in-postorder\",\n",
-    "\"Trade-InBangalore\",\n",
-    "\"tradein\",\n",
-    "\"WDTIR-org\"]\n",
-    "\n",
-    "anithap = [\"amuti-posix\",\n",
-    "\"apolloop\",\n",
-    "\"apolloop-misc\",\n",
-    "\"apolloop-sde\",\n",
-    "\"detailpage-partner\",\n",
-    "\"m2a\",\n",
-    "\"maws-console-read-only\",\n",
-    "\"ms-mediacentral-users\",\n",
-    "\"software\",\n",
-    "\"source-code\",\n",
-    "\"source-code-misc\",\n",
-    "\"source-code-sde\",\n",
-    "\"thompson-dev\",\n",
-    "\"tintin-db-ro\",\n",
-    "\"tintinblr2\",\n",
-    "\"tradein\",\n",
-    "\"tradein-dml\",\n",
-    "\"tradein-sde\",\n",
-    "\"tradein-sea\",\n",
-    "\"tradein-strings-admin\",\n",
-    "\"tradein-strings-editor\",\n",
-    "\"adapt-demo-viewers\",\n",
-    "\"alexa-beta-nda\",\n",
-    "\"apt-users\",\n",
-    "\"BI-DATABASE-USEDVG\",\n",
-    "\"BI-GROUP-TRADEINPLATFORM\",\n",
-    "\"BI-GROUP-TRADEINPLATFORM-ETL\",\n",
-    "\"BI-GROUP-TRADEINPLATFORM-REPORTS\",\n",
-    "\"BI-GROUP-TRADEINREPORTS\",\n",
-    "\"BI-GROUP-TRADEINRESEARCH\",\n",
-    "\"BI-GROUP-TRADEINS\",\n",
-    "\"burner-users-prod\",\n",
-    "\"cscentral-warehousedeals\",\n",
-    "\"CYM-DE\",\n",
-    "\"CYM-FR\",\n",
-    "\"CYM-JP\",\n",
-    "\"CYM-UK\",\n",
-    "\"CYM-US\",\n",
-    "\"dar-TradeIn\",\n",
-    "\"gcexplorer-users \",\n",
-    "\"GreenerAccess\",\n",
-    "\"heartbeat-hbs1\",\n",
-    "\"heartbeat-hbs2\",\n",
-    "\"IMS-RECONCILIATION-SCORE-EDITORS\",\n",
-    "\"m2a-jsgo3mmk5ua5nwaqnbxa-SHADOW\",\n",
-    "\"mediatech-j5fm3z7pu2nqbwc6izqq-SHADOW\",\n",
-    "\"merchant-portal-users\",\n",
-    "\"merchant-portal-users-cn\",\n",
-    "\"merchant-portal-users-eu\",\n",
-    "\"merchant-portal-users-fe\",\n",
-    "\"merchant-portal-users-na\",\n",
-    "\"mfa-ops-tool-user\",\n",
-    "\"MRA-Guidebook\",\n",
-    "\"PARISPortalWebsiteView\",\n",
-    "\"Pokey-Access\",\n",
-    "\"PPDataDevoRW\",\n",
-    "\"Proto-Handling-OK\",\n",
-    "\"SalesVelocity-Users\",\n",
-    "\"security-bastions-prod-users-dub\",\n",
-    "\"security-bastions-prod-users-iad\",\n",
-    "\"security-bastions-prod-users-pdx\",\n",
-    "\"sourcecodesde-ytpxj4yoqzxiuwisam2a-SHADOW\",\n",
-    "\"supersonic-IN\",\n",
-    "\"testingldap2\",\n",
-    "\"thompson-dev\",\n",
-    "\"thompson-pm\",\n",
-    "\"tortuga-viewer-non-uci\",\n",
-    "\"trade-in-postorder\",\n",
-    "\"tradein-dev\",\n",
-    "\"tradein-dw\",\n",
-    "\"tradein-fc5lrminur4u2wec6rgq-SHADOW\",\n",
-    "\"tradein-sea\",\n",
-    "\"tradeinblr2-ae3er6ngxtkwe3ssni6q-SHADOW\",\n",
-    "\"wma-users\",\n",
-    "\"amazon-recommerce-libby\",\n",
-    "\"fs-df-vendormanager\",\n",
-    "\"FS-NA-Media\",\n",
-    "\"IndiaTechs\",\n",
-    "\"Lync2010-Conferencing\",\n",
-    "\"media-tech\",\n",
-    "\"MyTime-India-Users-Rules-Base\",\n",
-    "\"NA-Vendor-Agreement-FAQ-Business-ANT\",\n",
-    "\"north-america-retail\",\n",
-    "\"PAOS-Reports-ANT\",\n",
-    "\"retail-sherpa-business\",\n",
-    "\"retail-sherpa-tc-guide\",\n",
-    "\"ryder-org-tech-all\",\n",
-    "\"singv-org\",\n",
-    "\"surs-mail-listing\",\n",
-    "\"techblrhyddel\",\n",
-    "\"trade-in-postorder\",\n",
-    "\"Trade-InBangalore\",\n",
-    "\"WDTIR-org\"]\n",
-    "\n",
-    "print(len(anithap))\n",
-    "print(len(faizan))\n",
-    "\n",
-    "set(list(set(anithap) - set(faizan)))\n",
-    "len(set(list(set(anithap) - set(faizan))))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-27T20:07:17.142506Z",
      "start_time": "2017-09-27T20:07:16.256675Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -258,7 +65,8 @@
     "ExecuteTime": {
      "end_time": "2017-09-24T14:16:05.584948Z",
      "start_time": "2017-09-24T14:16:05.513173Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1103,7 +911,8 @@
     "ExecuteTime": {
      "end_time": "2017-09-27T20:10:54.712550Z",
      "start_time": "2017-09-27T20:09:27.197973Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1123,7 +932,8 @@
     "ExecuteTime": {
      "end_time": "2017-09-27T20:33:36.741203Z",
      "start_time": "2017-09-27T20:32:41.667077Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1143,7 +953,8 @@
     "ExecuteTime": {
      "end_time": "2017-09-27T20:33:41.269382Z",
      "start_time": "2017-09-27T20:33:36.742834Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1164,6 +975,7 @@
      "end_time": "2017-09-27T20:38:25.335851Z",
      "start_time": "2017-09-27T20:37:20.816415Z"
     },
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1176,7 +988,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1198,7 +1012,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   },
   "toc": {
    "nav_menu": {},
