XGB and some feature engg for recruit restaurant visitor challenge

--- a/kaggle/recruit-restaurant-visitor-forecasting/Simple-Mean-Pred.ipynb
+++ b/kaggle/recruit-restaurant-visitor-forecasting/Simple-Mean-Pred.ipynb
@@ -100,84 +100,29 @@
     "#### Are All Air Ids to predict present in \n",
     "- air visit data - Yes\n",
     "- air store info - Yes\n",
-    "- air reserve - No"
+    "- air reserve - No\n",
+    "\n",
+    "#### Are All Air visit data in air store info: Yes\n",
+    "- Is vice versa true - Yes\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 83,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-18T20:33:21.356004Z",
-     "start_time": "2017-12-18T20:33:21.139730Z"
+     "end_time": "2017-12-19T17:05:06.683874Z",
+     "start_time": "2017-12-19T17:05:05.506582Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>visitors</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>air_00a91d42b08b08d9_2017-04-23</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>air_00a91d42b08b08d9_2017-04-24</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>air_00a91d42b08b08d9_2017-04-25</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>air_00a91d42b08b08d9_2017-04-26</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>air_00a91d42b08b08d9_2017-04-27</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                id  visitors\n",
-       "0  air_00a91d42b08b08d9_2017-04-23         0\n",
-       "1  air_00a91d42b08b08d9_2017-04-24         0\n",
-       "2  air_00a91d42b08b08d9_2017-04-25         0\n",
-       "3  air_00a91d42b08b08d9_2017-04-26         0\n",
-       "4  air_00a91d42b08b08d9_2017-04-27         0"
+       "Series([], Name: id, dtype: object)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -187,17 +132,7 @@
        "Series([], Name: id, dtype: object)"
       ]
      },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Series([], Name: id, dtype: object)"
-      ]
-     },
-     "execution_count": 77,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -207,18 +142,43 @@
        "507"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Series([], Name: air_store_id, dtype: object)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Series([], Name: air_store_id, dtype: object)"
+      ]
+     },
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sample_sub = pd.read_csv(\"data/sample_submission.csv\")\n",
-    "sample_sub.head()\n",
+    "\n",
     "pred_ids = sample_sub.id.map(lambda x:x[:-11])\n",
     "pred_ids[~pred_ids.isin(df_air_visit_data[\"air_store_id\"])]\n",
     "pred_ids[~pred_ids.isin(df_air_store_info[\"air_store_id\"])]\n",
-    "pred_ids[~pred_ids.isin(df_air_reserve[\"air_store_id\"])].nunique()\n"
+    "pred_ids[~pred_ids.isin(df_air_reserve[\"air_store_id\"])].nunique()\n",
+    "\n",
+    "air_visit_ids = df_air_visit_data[\"air_store_id\"]\n",
+    "air_visit_ids[~air_visit_ids.isin(df_air_store_info[\"air_store_id\"])]\n",
+    "\n",
+    "df_air_store_info[\"air_store_id\"][~df_air_store_info[\"air_store_id\"].isin(df_air_visit_data[\"air_store_id\"])]\n"
    ]
   },
   {
