Added month to recruit-restaurant-challenge

--- a/kaggle/recruit-restaurant-visitor-forecasting/Simple-Mean-Pred.ipynb
+++ b/kaggle/recruit-restaurant-visitor-forecasting/Simple-Mean-Pred.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-17T18:34:21.343734Z",
-     "start_time": "2017-12-17T18:34:00.274439Z"
+     "end_time": "2018-01-07T15:40:49.694544Z",
+     "start_time": "2018-01-07T15:40:48.824176Z"
     },
     "collapsed": true
    },
@@ -61,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-17T18:40:16.943322Z",
-     "start_time": "2017-12-17T18:40:15.106540Z"
+     "end_time": "2018-01-07T15:40:51.244351Z",
+     "start_time": "2018-01-07T15:40:49.696201Z"
     },
     "collapsed": true
    },
@@ -77,12 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-18T16:51:53.872193Z",
-     "start_time": "2017-12-18T16:51:53.559274Z"
-    }
+     "end_time": "2018-01-07T15:40:51.376509Z",
+     "start_time": "2018-01-07T15:40:51.245873Z"
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -108,11 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-19T17:05:06.683874Z",
-     "start_time": "2017-12-19T17:05:05.506582Z"
+     "end_time": "2018-01-07T15:40:53.008411Z",
+     "start_time": "2018-01-07T15:40:51.442744Z"
     }
    },
    "outputs": [
@@ -122,7 +123,7 @@
        "Series([], Name: id, dtype: object)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -132,7 +133,7 @@
        "Series([], Name: id, dtype: object)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -142,7 +143,7 @@
        "507"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -152,7 +153,7 @@
        "Series([], Name: air_store_id, dtype: object)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -162,7 +163,7 @@
        "Series([], Name: air_store_id, dtype: object)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,11 +184,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-18T16:54:36.716212Z",
-     "start_time": "2017-12-18T16:54:36.692620Z"
+     "end_time": "2018-01-07T15:40:53.023701Z",
+     "start_time": "2018-01-07T15:40:53.009832Z"
     }
    },
    "outputs": [
@@ -197,7 +198,7 @@
        "829"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,44 +209,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-18T17:31:02.675751Z",
-     "start_time": "2017-12-18T17:31:02.661359Z"
+     "end_time": "2018-01-07T15:42:31.330467Z",
+     "start_time": "2018-01-07T15:42:31.326368Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def loss(Y,A):\n",
+    "    length = len(Y)\n",
+    "    return np.sqrt(np.sum(np.square(np.log1p(Y) - np.log1p(A)))/length)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-01-07T15:42:31.760218Z",
+     "start_time": "2018-01-07T15:42:31.727488Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.07802537852290678"
+       "0.067217886813579056"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def loss(Y,A):\n",
-    "    length = len(Y)\n",
-    "    return np.sqrt(np.sum(np.square(np.log(Y) - np.log(A)))/length)\n",
-    "loss(df_air_visit_data[\"visitors\"],df_air_mean_visits[\"visitors\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-12-18T17:26:41.893130Z",
-     "start_time": "2017-12-18T17:26:41.866494Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_air_mean_visits = df_air_visit_data.groupby([\"air_store_id\"],as_index=False).mean()"
+    "df_air_mean_visits = df_air_visit_data.groupby([\"air_store_id\"],as_index=False).mean()\n",
+    "loss(df_air_visit_data[\"visitors\"],df_air_mean_visits[\"visitors\"])"
    ]
   },
   {
@@ -415,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   },
   "toc": {
    "nav_menu": {},
